--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ayushi200116.github.io/React_Task_3",
   "name": "color-picker",
   "version": "0.1.0",
   "private": true,
